# messenger

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: encrypt.rs  main.rs
program/: Cargo.toml
program/src/: lib.rs
program/tests/: integration.rs
